# learn-data-visualization

./: 1_matplotlib.ipynb  2_distribution_plot.ipynb  3_categorical_plot.ipynb  4_matrix_plot.ipynb  5_regression_plot.ipynb  6_plotly_and_cufflinks.ipynb  7_IPL_capstone_project.ipynb  README.md  pyproject.toml  requirements.txt
